# harmonograf

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  buf.yaml  pyproject.toml
.agents/: hgraf-add-control-kind.md  hgraf-add-drawer-tab.md  hgraf-add-drift-kind.md  hgraf-add-gantt-overlay.md  hgraf-add-keyboard-shortcut.md  hgraf-add-proto-message.md  hgraf-add-reporting-tool.md  hgraf-bump-proto-version.md  hgraf-migrate-sqlite-schema.md  hgraf-profile-callback-perf.md  hgraf-review-pr.md  hgraf-run-demo.md  hgraf-safe-buffer-edit.md  hgraf-safely-modify-adk-py.md  hgraf-spawn-agent-team.md  hgraf-update-frontend-component.md  hgraf-update-planner-prompt.md  hgraf-write-e2e-scenario.md
client/: pyproject.toml
client/harmonograf_client/: __init__.py  _control_bridge.py  adk.py  adk_web.py  agent.py  buffer.py  client.py  config.py  control_channel.py  enums.py  heartbeat.py  identity.py  invariants.py  metrics.py  observe.py  planner.py  replay.py  runner.py  sink.py  state_protocol.py  telemetry_plugin.py  tools.py  transport.py
client/harmonograf_client/pb/: __init__.py
client/harmonograf_client/pb/harmonograf/v1/: control_pb2.py  control_pb2.pyi  control_pb2_grpc.py  frontend_pb2.py  frontend_pb2.pyi  service_pb2.py  service_pb2_grpc.py  telemetry_pb2.py  telemetry_pb2.pyi  types_pb2.py  types_pb2.pyi
client/tests/: _fixtures.py  conftest.py  test_adk_adapter.py  test_adk_helpers.py  test_adk_web.py  test_agent.py  test_auth.py  test_buffer.py  test_callback_perf.py  test_client_additional_control_sub.py  test_client_api.py  test_client_config.py  test_client_plan.py  test_client_session_subscription.py  test_control_bridge.py  test_control_channel.py  test_drift_taxonomy.py  test_dynamic_plans_real_adk.py  test_event_observation.py  test_harmonograf_sink.py  test_heartbeat.py  test_identity.py  test_invariants.py  test_llm_agency_scenarios.py  test_model_callbacks.py  test_observe.py  test_orchestration_modes.py  test_planner.py  test_protocol_callbacks.py  test_replay.py  test_reporting_registration.py  test_reporting_tools.py  test_ring_buffer.py  test_runner.py  test_sink_canonicalization.py  test_sink_invocation_cancelled.py  test_sink_llm_span_translation.py  test_sink_refine_events.py  test_sink_user_messages.py  test_state_protocol.py  (+18 more)
docs/: goldfive-integration.md  goldfive-migration-plan.md  index.md  md3-console-retirement.md  milestones.md  operator-quickstart.md  overview.md  quickstart.md  reporting-tools.md  standalone-observability.md  zicato-frontend-port.md  zicato-handoff.md
server/: README.md  pyproject.toml
server/harmonograf_server/: __init__.py  __main__.py  _cors.py  _sonora_shim.py  auth.py  bus.py  cli.py  config.py  control_router.py  convert.py  health.py  ingest.py  interventions.py  logging_setup.py  main.py  metrics.py  retention.py  static_site.py  stress.py
server/harmonograf_server/pb/: __init__.py
server/harmonograf_server/pb/harmonograf/v1/: control_pb2.py  control_pb2.pyi  frontend_pb2.py  frontend_pb2.pyi  frontend_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  telemetry_pb2.py  telemetry_pb2.pyi  telemetry_pb2_grpc.py  types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
server/harmonograf_server/rpc/: control.py  frontend.py  telemetry.py
server/harmonograf_server/storage/: __init__.py  base.py  factory.py  memory.py  postgres.py  sqlite.py
server/tests/: storage_test.py  test_auth_and_health.py  test_bootstrap.py  test_bus_extensive.py  test_control_e2e.py  test_control_router.py  test_control_router_extensive.py  test_control_router_session_scoped.py  test_control_router_unified_session.py  test_convert_round_trip.py  test_delegation_observed_assignee_pin.py  test_dry_run_plan_revisions.py  test_frontend_rpcs.py  test_goldfive_ingest.py  test_ingest_extensive.py  test_ingest_task_binding.py  test_interventions.py  test_invocation_cancelled_ingest.py  test_invocation_cancelled_rpc.py  test_logging_and_metrics.py  test_payload_gc.py  test_refine_events_ingest.py  test_refine_events_rpc.py  test_retention.py  test_rpc_frontend.py  test_rpc_plan_history.py  test_sonora_shim.py  test_static_site.py  test_storage_extensive.py  test_task_plans.py  test_task_transitioned_rpc.py  test_telemetry_ingest.py  test_user_messages_ingest.py  test_user_messages_rpc.py
(+419 files in other folders)
