[project]
name = "harmonograf"
version = "0.0.0"
description = "Harmonograf monorepo root. Aggregates server, client, and e2e tests."
requires-python = ">=3.11"
dependencies = [
    "harmonograf-server",
    "harmonograf-client",
    "goldfive",
]

[project.optional-dependencies]
e2e = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "google-adk",
]
demo = [
    "google-adk",
    "litellm>=1.75.5",
]

[tool.uv.sources]
harmonograf-server = { workspace = true }
harmonograf-client = { workspace = true }
google-adk = { path = "third_party/adk-python", editable = true }
goldfive = { path = "../goldfive", editable = true }

[tool.uv.workspace]
members = ["server", "client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
