[project]
name = "harmonograf-client"
version = "0.0.0"
description = "Python client library for harmonograf — non-blocking agent telemetry over bidi gRPC."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harmonograf_client*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
