[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonograf-server"
version = "0.0.1"
description = "Harmonograf server: gRPC fan-in for multi-agent telemetry and control."
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=4.25",
    "aiosqlite>=0.20",
    "intervaltree>=3.1",
    "rich>=13.7",
    "sonora>=0.2.2",
    "hypercorn>=0.17",
    "goldfive",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
harmonograf-server = "harmonograf_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["harmonograf_server"]
# Ship the built console SPA inside the wheel so `pip/uv install
# harmonograf-server` carries the UI with no separate frontend build on the
# consumer's side. The bundle is staged into harmonograf_server/_console/ by
# `make console` (frontend pnpm build → copy into the package) before
# packaging; static_site.py locates it at runtime via importlib.resources.
# `artifacts` overrides the repo .gitignore so the staged, uncommitted bundle
# is collected. It is permissive: when _console/ is absent (a plain dev
# checkout / editable install) the wheel simply omits it and the server falls
# back to ../frontend/dist or serves gRPC-Web + health only.
artifacts = ["harmonograf_server/_console/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
